# feed2imap

./: .build.yml  .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  cliff.toml
.github/workflows/: build.yml  release.yml
migrations/: 0001_add_feeds_entries_tables.sql
src/: fetch.rs  imap.rs  lib.rs  store.rs  sync.rs  transform.rs
src/assets/: message.css
src/transform/: html.rs  mod.rs
