[package]
name = "feed2imap"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "feed2imap"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
async-imap = { version = "0.9.5", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5.0", default-features = false, features = ["runtime-tokio"] }
blake3 = "1.5.0"
bytes = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive", "env"] }
feed-rs = "1.3.0"
log = "0.4.20"
mail-builder = "0.3.1"
mime = "0.3.17"
pretty_env_logger = "0.5.0"
reqwest = "0.11.23"
sqlx = { version = "0.7.3", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["full"] }

[patch.crates-io]
feed-rs = { git = "https://github.com/feed-rs/feed-rs.git" }
