[package]
name = "feed2imap"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/gleroi/feed2imap"


[[bin]]
name = "feed2imap"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
async-imap = { version = "0.9.5", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5.0", default-features = false, features = ["runtime-tokio"] }
blake3 = "1.5.0"
bytes = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive", "env"] }
directories = "5.0.1"
dirs = "5.0.1"
feed-rs = "1.3.0"
futures = "0.3.30"
html-escape = "0.2.13"
indicatif = "0.17.8"
log = "0.4.20"
lol_html = "1.2.0"
mail-builder = "0.3.1"
mail-parser = "0.9.2"
mime = "0.3.17"
pretty_env_logger = "0.5.0"
reqwest = "0.11.23"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"

[patch.crates-io]
feed-rs = { git = "https://github.com/gleroi/feed-rs.git", branch = "master" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
